--- a/package.json
+++ b/package.json
@@ -1,18 +1,26 @@
 {
   "name": "metadata-api-nodejs",
+  "type": "module",
   "version": "1.0.0",
   "description": "Sample metadata API for crypto collectibles",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start1": "node index.js",
+    "start": "node --experimental-json-modules bot.js",
+    "start-pet": "node --experimental-json-modules src/bots/pet-updater.js",
     "test": "node test.js"
   },
   "author": "Alex Atallah <alex.atallah@opensea.io>",
   "license": "MIT",
   "dependencies": {
+    "@cnsdomains/core": "^0.1.2",
+    "axios": "^0.27.2",
     "ejs": "^2.6.1",
+    "ethers": "^5.6.6",
     "express": "^4.16.4",
-    "moment": "^2.22.2"
+    "moment": "^2.22.2",
+    "node-fetch": "^3.2.6",
+    "nodemon": "^2.0.16"
   },
   "devDependencies": {
     "request": "^2.81.0",
